# simplx

./: .gitignore  CMakeLists.txt  common_simplx.cmake  compile_commands.json
include/simplx_core/connector/uwebsocket/: uWebSocketsPlugin.h
tutorial/04_printer_actor_service/: CMakeLists.txt  printer_actor_proxy_service.cpp
tutorial/09_sync_exit/: CMakeLists.txt
tutorial/10_timer/: timer.cpp
tutorial/15_websocket_integration/: uWebSocketsActor.cpp
